# BioEvidence-Forge

./: .env.example  .gitignore  Dockerfile  HOW_IT_WORKS.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: OPERATIONS.md
src/bioevidence/: __init__.py  api.py  cli.py  config.py  models.py  pipeline.py  reporting.py  scheduler.py  scoring.py  storage.py  validation.py
src/bioevidence/sources/: __init__.py  pubmed.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py  test_pubmed.py  test_reporting.py  test_scheduler.py  test_scoring.py  test_storage.py  test_validation.py
