[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bioevidence-forge"
version = "0.1.0"
description = "Offline-first biomedical evidence monitoring and review service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BioEvidence Forge Contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "loguru>=0.7,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
bioevidence = "bioevidence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bioevidence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --cov=bioevidence --cov-report=term-missing --cov-fail-under=95"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["bioevidence"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
